--- a/superRepertory.html
+++ b/superRepertory.html
@@ -3,13 +3,23 @@
 </head>
 
 <body>
-	{{> loginButtons}}
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-</body>
+  </body>
 
 <template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
+</template>
+
+<template name="Home">
+	{{> loginButtons}}
+	<h1>{{title}}</h1>
+</template>
+<template name="Repository">
+	<h1>{{title}}</h1>
+</template>
+<template name="ContactCreate">
+	<form>
+		<input type="text" name="firstname"/>
+		<input type="submit"/>
+	</form>
 </template>
