update css and html

--- a/superRepertory.html
+++ b/superRepertory.html
@@ -42,9 +42,12 @@
 	</form>
 </template>
 <template name="nav">
-    <ul>
-        <li><a href="/">Accueil</a></li>
-        <li><a href="/contact/create">Créer contact</a></li>
-        <li><a href="/myprofil">Mon profil</a></li>
-    </ul>
+	<header class="navbar navbar-default" role="navigation">
+  <div class="navbar-header">
+        <a href="/">Accueil</a>
+        <a href="/contact/create">Créer contact</a>
+        <a href="/myprofil">Mon profil</a>
+  </div>
+</header>
+
 </template>
